--- a/extension.toml
+++ b/extension.toml
@@ -1,11 +1,15 @@
 id = "fish"
 name = "Fish"
-description = "Fish language support for Zed"
-version = "0.0.9"
+description = "Fish language support."
+version = "0.1.0"
 schema_version = 1
-authors = ["Hasit Mistry <hasitnm@gmail.com>"]
-repository = "https://github.com/hasit/zed-fish"
+authors = ["ClanEver <TRjdiam@hotmail.com>", "Hasit Mistry <hasitnm@gmail.com>"]
+repository = "https://github.com/ClanEver/zed-fish"
 
 [grammars.fish]
 repository = "https://github.com/ram02z/tree-sitter-fish"
 commit = "a78aef9abc395c600c38a037ac779afc7e3cc9e0"
+
+[language_servers.fish-lsp]
+name = "fish-lsp"
+language = "Fish"
